--- a/.env.example
+++ b/.env.example
@@ -100,3 +100,10 @@ CAPACITY_TTL_SECONDS=3600
 # -----------------------------------------------------------------------------
 # REDIS_URL=redis://redis:6379
 # DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+
+# Ngrok (for tunneling - get token from https://dashboard.ngrok.com)
+NGROK_AUTHTOKEN=
+
+# Cloudflare Tunnel (recommended - get token from Zero Trust dashboard)
+# Go to: Zero Trust → Networks → Tunnels → Create tunnel → Copy token
+CLOUDFLARE_TUNNEL_TOKEN=
