fix: enable SpeexDSP acoustic echo cancellation (AEC)
- Install libspeexdsp-dev in runtime Dockerfile so the native FFI
  binding can load the shared library
- Enable STT_AEC_ENABLED=true in docker-compose.yml for the runtime
- Previously only libspeex (codec) was installed but not libspeexdsp
  (DSP library with echo cancellation), causing AEC to silently disable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -157,6 +157,7 @@ services:
       - STT_CHUNK_MS=${STT_CHUNK_MS:-100}
       - STT_SILENCE_MS=${STT_SILENCE_MS:-700}
       - STT_SPEECH_FRAMES_REQUIRED=${STT_SPEECH_FRAMES_REQUIRED:-3}
+      - STT_AEC_ENABLED=${STT_AEC_ENABLED:-true}
       - DEAD_AIR_MS=${DEAD_AIR_MS:-10000}
       # Rate Limiting
       - GLOBAL_CONCURRENCY_CAP=${GLOBAL_CONCURRENCY_CAP:-100}
