--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,8 @@ services:
         condition: service_healthy
       control:
         condition: service_healthy
+      brain:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:4001/health/live"]
       interval: 15s
@@ -131,7 +133,7 @@ services:
       - CONTROL_URL=http://control:4000
       - LOG_LEVEL=${LOG_LEVEL:-info}
       # LLM / Brain
-      - BRAIN_URL=http://control:4000/reply
+      - BRAIN_URL=http://brain:3001/reply
       - BRAIN_TIMEOUT_MS=${BRAIN_TIMEOUT_MS:-15000}
       - LLM_PROVIDER=${LLM_PROVIDER:-openai}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
@@ -159,10 +161,13 @@ services:
       - WHISPER_URL=${WHISPER_URL:-http://whisper:9000/transcribe}
       # Speech-to-Text Settings
       - STT_CHUNK_MS=${STT_CHUNK_MS:-100}
-      - STT_SILENCE_MS=${STT_SILENCE_MS:-700}
+      - STT_SILENCE_MS=${STT_SILENCE_MS:-500}
       - STT_SPEECH_FRAMES_REQUIRED=${STT_SPEECH_FRAMES_REQUIRED:-3}
       - STT_AEC_ENABLED=${STT_AEC_ENABLED:-true}
       - DEAD_AIR_MS=${DEAD_AIR_MS:-10000}
+      # Streaming segmentation
+      - BRAIN_STREAM_SEGMENT_MIN_CHARS=${BRAIN_STREAM_SEGMENT_MIN_CHARS:-40}
+      - BRAIN_STREAM_SEGMENT_NEXT_CHARS=${BRAIN_STREAM_SEGMENT_NEXT_CHARS:-60}
       # Rate Limiting
       - GLOBAL_CONCURRENCY_CAP=${GLOBAL_CONCURRENCY_CAP:-100}
       - TENANT_CONCURRENCY_CAP_DEFAULT=${TENANT_CONCURRENCY_CAP_DEFAULT:-10}
@@ -175,6 +180,44 @@ services:
       - audio-storage:/app/audio
     ports:
       - "${RUNTIME_PORT:-4001}:4001"
+    networks:
+      - veralux-network
+
+  # =============================================================================
+  # Brain (LLM) Service
+  # =============================================================================
+
+  brain:
+    image: ${REGISTRY:-ghcr.io/nick-veraluxai}/veralux-brain:${VERSION:-latest}
+    build:
+      context: ./veralux-voice-runtime/brain-gpt4o
+      dockerfile: Dockerfile
+    container_name: veralux-brain
+    restart: unless-stopped
+    logging: *default-logging
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/health"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+    deploy:
+      resources:
+        limits:
+          cpus: "1.0"
+          memory: 512M
+        reservations:
+          cpus: "0.1"
+          memory: 128M
+    environment:
+      - PORT=3001
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-ollama}
+      - OPENAI_BASE_URL=${OPENAI_BASE_URL:-http://host.docker.internal:11434/v1}
+      - OPENAI_MODEL=${BRAIN_MODEL:-llama3.2:3b}
+    ports:
+      - "${BRAIN_PORT:-3001}:3001"
     networks:
       - veralux-network
 
@@ -355,6 +398,8 @@ services:
               capabilities: [gpu]
     environment:
       - VOICE_ID=${KOKORO_VOICE_ID:-default}
+      - ONNX_PROVIDER=CUDAExecutionProvider
+      - PIP_EXTRA=onnxruntime-gpu
     ports:
       - "${KOKORO_PORT:-7001}:7001"
     networks:
