chore: replace open-source licenses with proprietary VeraLux AI license
All MIT and Apache 2.0 licenses replaced with a proprietary license
that requires a valid paid commercial license for any use, copying,
modification, or redistribution. Contact: nick@veralux.ai

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -8,7 +8,7 @@
     "dev": "electron . --dev"
   },
   "author": "Nick <nick@veralux.ai>",
-  "license": "UNLICENSED",
+  "license": "SEE LICENSE IN ../LICENSE",
   "private": true,
   "dependencies": {
     "electron": "^33.0.0"
