feat: add EULA acceptance gate to desktop app
Users must read and accept the proprietary license agreement on first
launch before they can access the app. Acceptance is persisted locally
and re-prompted if the license text changes. Declining exits the app.

--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,9 @@ images.tar.zst
 # Database backups (contain production data)
 backups/
 
+# EULA acceptance (per-machine, not committed)
+.eula-accepted
+**/.eula-accepted
+
 # Misc dev artifacts
 oldenv.txt
