feat: enable Silero VAD and tighten speech detection to reject background noise
- Enable Silero neural VAD (STT_VAD_ENABLED=true, threshold 0.45) to
  distinguish real speech from background conversation, TV, and noise
- Raise STT_SPEECH_FRAMES_REQUIRED from 3 to 6 (120ms sustained speech)
- Raise RMS floor from 0.015 to 0.025 and peak floor from 0.05 to 0.08
  as secondary energy gate

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -162,8 +162,15 @@ services:
       # Speech-to-Text Settings
       - STT_CHUNK_MS=${STT_CHUNK_MS:-100}
       - STT_SILENCE_MS=${STT_SILENCE_MS:-500}
-      - STT_SPEECH_FRAMES_REQUIRED=${STT_SPEECH_FRAMES_REQUIRED:-3}
+      - STT_SPEECH_FRAMES_REQUIRED=${STT_SPEECH_FRAMES_REQUIRED:-6}
       - STT_AEC_ENABLED=${STT_AEC_ENABLED:-true}
+      - STT_RMS_FLOOR=${STT_RMS_FLOOR:-0.025}
+      - STT_PEAK_FLOOR=${STT_PEAK_FLOOR:-0.08}
+      # Silero VAD (neural voice activity detection — rejects background noise)
+      - STT_VAD_ENABLED=${STT_VAD_ENABLED:-true}
+      - STT_VAD_THRESHOLD=${STT_VAD_THRESHOLD:-0.45}
+      - STT_VAD_SPEECH_FRAMES_REQUIRED=${STT_VAD_SPEECH_FRAMES_REQUIRED:-3}
+      - STT_VAD_SILENCE_FRAMES_REQUIRED=${STT_VAD_SILENCE_FRAMES_REQUIRED:-6}
       - DEAD_AIR_MS=${DEAD_AIR_MS:-10000}
       # Streaming segmentation
       - BRAIN_STREAM_SEGMENT_MIN_CHARS=${BRAIN_STREAM_SEGMENT_MIN_CHARS:-40}
