security: production hardening — ports, secrets, CORS, backups, graceful shutdown
- Remove exposed host ports for internal services (brain, whisper, kokoro, xtts)
- Rotate all secrets (ADMIN_API_KEY, JWT_SECRET, POSTGRES_PASSWORD, encryption key, media token)
- Enable Telnyx webhook signature verification
- Harden CORS: enforce Origin allowlist for browser requests, allow non-browser requests (auth-protected)
- Enable Redis-backed rate limiting for persistence across restarts
- Exempt loopback/Docker-bridge IPs from rate limiting (local deployment)
- Add Redis backup script (scripts/backup-redis.sh)
- Schedule automated daily backups via cron (Postgres 2:00am, Redis 2:15am, 30-day retention)
- Increase control plane graceful shutdown timeout from 8s to 30s
- Add STOPSIGNAL SIGTERM to control-plane and runtime Dockerfiles

--- a/control-plane/Dockerfile
+++ b/control-plane/Dockerfile
@@ -68,5 +68,6 @@ RUN chown -R veralux:veralux /app
 USER veralux
 
 EXPOSE 4000
+STOPSIGNAL SIGTERM
 
 ENTRYPOINT ["/app/control-plane/scripts/docker-entrypoint.sh"]
